--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@googlemaps/react-wrapper": "^1.1.34",
     "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "mapbox-gl": "^2.8.2",
     "mtgsdk": "^1.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
