changes for deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "front",
   "version": "0.1.0",
+  "engines": {
+    "node": "17.8.0"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
